--- a/index.html
+++ b/index.html
@@ -130,7 +130,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="content-right-bottom">
 						<h3><a href="single.html"><span>Treat Yourself </span> with Gems </a></h3>
-						<p>At our jewelry store we believe that every piece tells a astory. We're passionate about helping you find the perfect piece that reflects you unique style and personality.From stunning diamond rings to elegant necklaces,our collection is curated with love anad care. We strive to provide exceptional customer service and create a memorable Shopping experience to you.Whether you are celebrating a special occasionor treating yourseslf, we are here to make you feel beautiful and confident.Come visit Us and let Us help you find the jewelry that speaks to your heart.  HAPPY SHOPPING!     </p>
+						<p>
+							
+Welcome to our exquisite online jewelry store, where luxury meets affordability. Discover a dazzling array of handcrafted jewelry pieces, including sparkling diamond rings, elegant pearl necklaces, and timeless gold bracelets. Our collection features the latest trends in fashion jewelry, perfect for adding a touch of glamour to any outfit. Explore our range of statement earrings, delicate pendants, and stunning engagement rings designed to capture hearts. With free shipping on orders over $50 and a satisfaction guarantee, shopping for the perfect piece has never been easier. Elevate your style with our curated selection of fine jewelry, crafted with precision and passion. Shop now and shine bright with"THE Glamour Gems." </p>
+
+<p>
+At our jewelry store we believe that every piece tells a astory. We're passionate about helping you find the perfect piece that reflects you unique style and personality.From stunning diamond rings to elegant necklaces,our collection is curated with love anad care. We strive to provide exceptional customer service and create a memorable Shopping experience to you.Whether you are celebrating a special occasionor treating yourseslf, we are here to make you feel beautiful and confident.Come visit Us and let Us help you find the jewelry that speaks to your heart. </p>
+<p>Indulge in luxury without breaking the bank at our online jewelry boutique. Explore our exclusive collection of fine jewelry, featuring exquisite designs crafted with the finest materials. From dazzling diamond earrings to elegant gemstone bracelets, each piece is a work of art that exudes elegance and sophistication. Whether you're looking for a special gift or a stunning statement piece for yourself, our curated selection has something for every style and occasion. Enjoy fast and secure shipping, hassle-free returns, and exceptional customer service. Elevate your look and make a lasting impression with [Your Store Name]. Shop now and experience the beauty of fine jewelry at your fingertips.</p>
+							HAPPY SHOPPING!     </p>
 					</div>
 					<!-- <div class="content-right-bottom"> -->
 						<!-- <h3><a href="single.html">Fusce <span>id venenatis</span> velit</a></h3>
