--- a/product.html
+++ b/product.html
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-3 product-grid">
 							<a href="single.html"><img class="img-responsive" src="images/pr8.jpg" alt=""></a>
 							<div class="ut">
-								<p><a href="single.html">Multiple tSones</a></p>
+								<p><a href="single.html">Gold Rings</a></p>
 								<span>$1000.00</span>
 								<a href="single.html">ADD TO CART</a>
 							</div>
@@ -193,11 +193,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-3 product-grid">
 							<a href="single.html"><img class="img-responsive" src="images/pr.jpg" alt=""></a>
 							<div class="ut">
-								<p><a href="single.html">Ut tempor elit vel adipiscing</a></p>
+								<p><a href="single.html"> Stainless Metal</a></p>
 								<span>$50.00</span>
 								<a href="single.html">ADD TO CART</a>
 							</div>
 					</div>
+					<div class="col-md-3 product-grid">
+						<a href="single.html"><img class="img-responsive" src="https://i.pinimg.com/originals/8e/11/a3/8e11a34d1835ff1bddeba1f2bb734774.jpg" alt=""></a>
+						<div class="ut">
+							<p><a href="single.html">Choker</a></p>
+							<span>$9000.00</span>
+							<a href="single.html">ADD TO CART</a>
+						</div>
+				</div>
+				<div class="col-md-3 product-grid">
+					<a href="single.html"><img class="img-responsive" src="https://i.pinimg.com/736x/d7/f4/68/d7f4685fa9fbeab100251c79e68717ef.jpg" alt=""></a>
+					<div class="ut">
+						<p><a href="single.html"> Pearl necklace</a></p>
+						<span>$7000.00</span>
+						<a href="single.html">ADD TO CART</a>
+					</div>
+			</div>
+			<div class="col-md-3 product-grid">
+				<a href="single.html"><img class="img-responsive" src="https://i.pinimg.com/736x/00/73/f5/0073f54d611a828879325a1009c2bf47.jpg" alt=""></a>
+				<div class="ut">
+					<p><a href="single.html"> Multi-Layer</a></p>
+					<span>$1200.00</span>
+					<a href="single.html">ADD TO CART</a>
+				</div>
+		</div>
+	</div>
+	<div class="col-md-3 product-grid">
+		<a href="single.html"><img class="img-responsive" src="https://cdn.shopify.com/s/files/1/0522/8095/0955/products/137A21287_x500.jpg" alt=""></a>
+		<div class="ut">
+			<p><a href="single.html"> Graduated</a></p>
+			<span>$1000.00</span>
+			<a href="single.html">ADD TO CART</a>
+		</div>
+</div>
 					
 					<div class="clearfix"> </div>
 				</div>
